# rss_demo

./: Cargo.toml  db_test.db
db/: Cargo.toml
db/src/: table.rs
db/tests/: test-db-table.rs
db_derive/: Cargo.toml
db_derive/src/: lib.rs
db_derive/tests/: test01.rs
src/: db.rs  main.rs  net.rs
src/models/: channel.rs  channel_item.rs  mod.rs
