workspace = { members = ["db_derive"] }
[package]
name = "rss_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
rss = "2.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
